--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-matplotlib~=3.6.2
-numpy~=1.23.5
-pyserial~=3.5
-pyqtgraph~=0.13.1
+keyboard==0.13.5
+matplotlib==3.6.3
+numpy==1.22.4
+pynput==1.7.6
+pyqtgraph==0.13.1
+pyserial==3.5
+seaborn==0.11.2
